# web-sw-cor24-fortran

./: CHANGES.md  CLAUDE.md  Cargo.toml  README.md  Trunk.toml  build.rs  index.html
assets/: classify.sno  emit_asm.sno  fortran.sno  hello.s  normalize.sno  prelude.s  putint.s  snobol4.lgo
docs/exploration/: README.md  demos.rs  help.rs  highlight.rs
docs/exploration/panels/: listing.rs  mod.rs
examples/: add.f  arithmetic.f  array1.f  factorial.f  fibonacci.f  fizzbuzz.f  goto1.f  greeting.f  hello.f  hello.lgo  math.f  print-int.f  print-var.f  quote.f  sum10.f
pages/: index.html  web-sw-cor24-fortran-1f5ee58e9ec4a33e_bg.wasm  web-sw-cor24-fortran-225523ab2a74faa5.js  web-sw-cor24-fortran-225523ab2a74faa5_bg.wasm  web-sw-cor24-fortran-278ec3dfa131790e_bg.wasm  web-sw-cor24-fortran-29be1489881d8806.js  web-sw-cor24-fortran-29be1489881d8806_bg.wasm  web-sw-cor24-fortran-8049f4b73854e95f.js  web-sw-cor24-fortran-8049f4b73854e95f_bg.wasm  web-sw-cor24-fortran-bf1bedbf67a20d4f_bg.wasm  web-sw-cor24-fortran-cb22cc1827b14c7f_bg.wasm  web-sw-cor24-fortran-cb48e0293c0e8e3c_bg.wasm  web-sw-cor24-fortran-d15da0a4ac0ffd0e_bg.wasm  web-sw-cor24-fortran-e1640a569b88df83_bg.wasm  web-sw-cor24-fortran-ec169b95f2cbce59_bg.wasm  web-sw-cor24-fortran-fd57c76e96569adb_bg.wasm
scripts/: build-pages.sh  serve.sh
src/: compiler.rs  demos.rs  editor.rs  help.rs  main.rs
src/panels/: uart.rs
