[package]
name = "web-sw-cor24-fortran"
version = "0.1.0"
edition = "2024"
authors = ["Michael A Wright"]
license = "MIT"
description = "Browser-based FORTRAN hello-world demo running on the COR24 emulator"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
gloo-timers = "0.3"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console", "HtmlElement", "HtmlTextAreaElement", "HtmlSelectElement"] }

cor24-emulator  = { path = "../sw-cor24-emulator",      default-features = false }
cor24-assembler = { path = "../sw-cor24-x-assembler",   default-features = false }

[profile.release]
opt-level = "z"
lto = true
